--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@arctic-kit/snow": "^0.6.2",
+    "@pigment-css/react": "^0.0.17",
+    "lottie-web": "^5.12.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.77.8",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
+    "@pigment-css/nextjs-plugin": "^0.0.17",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "framer-motion": "^11.2.13",
     "husky": "^9.1.1",
     "lint-staged": "^15.2.7",
     "prettier": "3.3.3",
