--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,8 +25,14 @@ jobs:
       - name: Build Next.js project
         run: yarn build
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v4
+      # - name: Deploy
+      #   uses: peaceiris/actions-gh-pages@v4
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: ./out
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./out
+          branch: gh-pages
+          folder: out # output folder from `yarn build`
