--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@next/mdx": "^14.2.5",
     "@pigment-css/react": "^0.0.17",
     "@types/mdx": "^2.0.13",
+    "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "lottie-web": "^5.12.2",
     "next": "14.2.5",
+    "prism-react-renderer": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.8",
@@ -35,6 +37,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^11.2.13",
     "husky": "^9.1.1",
     "lint-staged": "^15.2.7",
