--- a/package.json
+++ b/package.json
@@ -17,33 +17,32 @@
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.5",
-    "@pigment-css/react": "^0.0.17",
+    "@pigment-css/react": "^0.0.20",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "lottie-web": "^5.12.2",
     "next": "14.2.5",
     "prism-react-renderer": "^2.3.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "sass": "^1.77.8",
-    "sharp": "^0.33.4"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sass": "^1.77.8"
   },
   "devDependencies": {
-    "@pigment-css/nextjs-plugin": "^0.0.17",
+    "@pigment-css/nextjs-plugin": "^0.0.20",
     "@svgr/webpack": "^8.1.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@types/node": "^22.2.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
-    "framer-motion": "^11.2.13",
-    "husky": "^9.1.1",
-    "lint-staged": "^15.2.7",
+    "framer-motion": "^11.3.24",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.8",
     "prettier": "3.3.3",
     "serve": "^14.2.3",
-    "typescript": "^5"
+    "typescript": "^5.4.0"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
