--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "serve": "serve -l 5005 -s out"
   },
   "dependencies": {
-    "@arctic-kit/snow": "^0.7.1",
+    "@arctic-kit/colors": "^0.15.2",
+    "@arctic-kit/icons": "^0.15.2",
+    "@arctic-kit/snow": "^0.15.2",
+    "@floating-ui/react": "^0.26.23",
     "@heroicons/react": "^2.1.5",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
