--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prism-react-renderer": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-remove-scroll": "^2.5.10",
     "sass": "^1.77.8"
   },
   "devDependencies": {
