feat: improve code block section colors and update install steps to use `createColorSchemes()` when extending the theme using pigment

--- a/package.json
+++ b/package.json
@@ -9,33 +9,34 @@
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky",
-    "serve": "serve -l 5005 -s out"
+    "serve": "serve -l 5005 -s out",
+    "upgrade": "yarn upgrade-interactive"
   },
   "dependencies": {
-    "@arctic-kit/colors": "^0.18.4",
-    "@arctic-kit/icons": "^0.18.4",
-    "@arctic-kit/snow": "^0.18.4",
-    "@floating-ui/react": "^0.26.24",
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.9",
-    "@pigment-css/react": "^0.0.22",
+    "@arctic-kit/colors": "^0.21.0",
+    "@arctic-kit/icons": "^0.21.0",
+    "@arctic-kit/snow": "^0.21.0",
+    "@floating-ui/react": "^0.26.28",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^14.2.18",
+    "@pigment-css/react": "^0.0.28",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
-    "isomorphic-dompurify": "^2.15.0",
+    "isomorphic-dompurify": "^2.17.0",
     "lottie-web": "^5.12.2",
     "lunr": "^2.3.9",
-    "marked": "^14.1.2",
-    "next": "14.2.9",
+    "marked": "^14.1.4",
+    "next": "14.2.18",
     "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-remove-scroll": "^2.6.0",
-    "sass": "^1.78.0"
+    "sass": "^1.81.0"
   },
   "devDependencies": {
-    "@pigment-css/nextjs-plugin": "^0.0.22",
+    "@pigment-css/nextjs-plugin": "^0.0.28",
     "@svgr/webpack": "^8.1.0",
     "@types/lunr": "^2.3.7",
     "@types/node": "^22.2.0",
@@ -44,11 +45,11 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.9",
     "eslint-config-prettier": "^9.1.0",
-    "framer-motion": "^11.5.4",
-    "husky": "^9.1.5",
+    "framer-motion": "^11.11.17",
+    "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
-    "serve": "^14.2.3",
+    "serve": "^14.2.4",
     "typescript": "^5.4.0"
   },
   "lint-staged": {
