--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@floating-ui/react": "^0.27.5",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^14.2.24",
+    "@next/mdx": "15.2.1",
     "@pigment-css/react": "^0.0.30",
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.1",
@@ -29,10 +29,10 @@
     "lottie-web": "^5.12.2",
     "lunr": "^2.3.9",
     "marked": "^14.1.4",
-    "next": "14.2.24",
+    "next": "15.2.1",
     "prism-react-renderer": "^2.4.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-remove-scroll": "^2.6.3",
     "sass": "^1.81.0"
   },
@@ -41,10 +41,10 @@
     "@svgr/webpack": "^8.1.0",
     "@types/lunr": "^2.3.7",
     "@types/node": "^22.2.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.24",
+    "eslint-config-next": "15.2.1",
     "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^11.18.2",
     "husky": "^9.1.7",
@@ -56,5 +56,9 @@
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
-  "packageManager": "yarn@4.7.0"
+  "packageManager": "yarn@4.7.0",
+  "resolutions": {
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4"
+  }
 }
